MDEV-23004 When using GROUP BY with JSON_ARRAYAGG with joint table, the square brackets are not included.

Item_func_json_arrayagg::copy_or_same() should be implemented.